# Capstone-Project---RTAQT

./: AzureClient.kt  Backgroundmonitoringcard.kt  Backgroundmonitoringservice.kt  CMakeLists.txt  ChartViewModel.kt  ChartsScreen.kt  DataCreation.kt  DataScreen.kt  EmailPasswordActivity.kt  HomeScreen.kt  Interface_Api.kt  MQTT.kt  MainActivity.kt  MultiLineChart.kt  NavigationScreen.kt  NotificationUtils.kt  Notificationhelper.kt  PredicitonChart.kt  PredictionScreen.kt  PredictionTemperatureChart.kt  PredictionViewModel.kt  Routes.kt  Sensormonitorworker.kt  SignInScreen.kt  SignUpScreen.kt  SpecificationsScreen.kt  TESTING.kt  TESTSCREEN.kt  TelemetryParser.kt  azure_iot_freertos_esp32_main.c  function_app.py  hello_world_main.c  message_queue_trigger  predictionCodeHTTPTrigger.py  requirements.txt  sample_azure_iot_pnp.c  sample_azure_iot_pnp_data_if.h  sample_azure_iot_pnp_simulated_data.c  send_email_action
main/: CMakeLists.txt  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  __azurite_db_queue__.json  __azurite_db_queue_extent__.json  __azurite_db_table__.json  adc_config.c  adc_config.h  azure_iot_freertos_esp32_main.c  create_forecast_cache.sql  dataPullHTTPTrigger.py  function_app.py  i2c_config.c  i2c_config.h  idf_component.yml  local.settings.json  predictionCode.py  predictionCodeHTTPTrigger.py  predictionCodeHTTPTrigger.py.old  requirements.txt  sample_azure_iot_pnp.c  sample_azure_iot_pnp_simulated_data.c  time_connect.py
main/main/: adc_config.h  i2c_config.c  i2c_config.h  sample_azure_iot_pnp.c  sample_azure_iot_pnp_simulated_data.c
